dh-summary/mutants.out.old/log/src__lib.rs_line_300_col_9.log

*** src/lib.rs:300:9: delete match arm ColumnData::Str(v) in stats_str

*** mutation diff:
--- src/lib.rs
+++ delete match arm ColumnData::Str(v) in stats_str
@@ -292,21 +292,17 @@
         distinct: Some(distinct),
         top_k: None,
     }
 }
 
 #[allow(clippy::cast_precision_loss)]
 fn stats_str(data: &ColumnData, topk: usize) -> ColStats {
     let (values, null_count) = match data {
-        ColumnData::Str(v) => {
-            let non_null: Vec<&str> = v.iter().filter_map(|o| o.as_deref()).collect();
-            let nulls = v.iter().filter(|o| o.is_none()).count() as u64;
-            (non_null, nulls)
-        }
+         /* ~ changed by cargo-mutants ~ */
         _ => (vec![], 0),
     };
     let mut freq: HashMap<&str, u64> = HashMap::new();
     for s in &values {
         *freq.entry(s).or_insert(0) += 1;
     }
     let distinct = freq.len() as u64 + null_count.min(1);
     let mut freq_vec: Vec<(&str, u64)> = freq.into_iter().collect();


*** /Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=dh-summary@0.1.0
       Fresh unicode-ident v1.0.24
       Fresh itoa v1.0.18
       Fresh proc-macro2 v1.0.106
       Fresh memchr v2.8.1
       Fresh cfg-if v1.0.4
       Fresh quote v1.0.45
       Fresh serde_core v1.0.228
       Fresh zmij v1.0.21
       Fresh libc v0.2.186
       Fresh dyn-clone v1.0.20
       Fresh syn v2.0.117
       Fresh serde_json v1.0.150
       Fresh getrandom v0.4.2
       Fresh serde_derive v1.0.228
       Fresh serde_derive_internals v0.29.1
       Fresh uuid v1.23.2
       Fresh serde v1.0.228
       Fresh schemars_derive v0.8.22
       Fresh schemars v0.8.22
       Fresh dh-spec v0.1.0 (/Users/jsy/Documents/projects/dh-spec)
       Fresh dh-store v0.1.0 (/Users/jsy/Documents/projects/dh-store)
       Dirty dh-summary v0.1.0 (/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp): stale, unknown reason
   Compiling dh-summary v0.1.0 (/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp)
     Running `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=78d698b9a149721f -C extra-filename=-bd59e07e1bc4c303 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rmeta --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rmeta --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rmeta`
     Running `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=343947f4240e2b9c -C extra-filename=-5243533f63ef4209 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rlib --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rlib --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rlib`
error[E0277]: the size for values of type `str` cannot be known at compilation time
   --> src/lib.rs:304:14
    |
304 |     for s in &values {
    |              ^^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `str`
    = note: required for `std::slice::Iter<'_, str>` to implement `Iterator`

error[E0277]: the size for values of type `str` cannot be known at compilation time
   --> src/lib.rs:301:15
    |
301 |         _ => (vec![], 0),
    |               ^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `Vec::<T>::new`
   --> /rustc/4d91de4e48198da2e33413efdcd9cd2cc0c46688/library/alloc/src/vec/mod.rs:422:5
    = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `str` cannot be known at compilation time
   --> src/lib.rs:301:15
    |
301 |         _ => (vec![], 0),
    |               ^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `str`
note: required by an implicit `Sized` bound in `Vec`
   --> /rustc/4d91de4e48198da2e33413efdcd9cd2cc0c46688/library/alloc/src/vec/mod.rs:397:1
    = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `dh-summary` (lib) due to 3 previous errors

Caused by:
  process didn't exit successfully: `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=78d698b9a149721f -C extra-filename=-bd59e07e1bc4c303 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rmeta --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rmeta --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `dh-summary` (lib test) due to 3 previous errors

Caused by:
  process didn't exit successfully: `/Users/jsy/.rustup/toolchains/1.85.0-aarch64-apple-darwin/bin/rustc --crate-name dh_summary --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=343947f4240e2b9c -C extra-filename=-5243533f63ef4209 --out-dir /private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps -C incremental=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/incremental -L dependency=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps --extern dh_spec=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libdh_spec-fa2ae146e2e0d5cb.rlib --extern dh_store=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libdh_store-b5128db5421edc74.rlib --extern serde_json=/private/var/folders/d3/c59bpjrx1778lb2rxcplcltr0000gn/T/cargo-mutants-dh-summary-4oQvAp.tmp/target/debug/deps/libserde_json-3fe3499550b3ea1e.rlib` (exit status: 1)

*** result: Failure(101)
